Cleaned up membership form a bit and got full_home_address_method set up

--- a/app/views/memberships/_form.html.haml
+++ b/app/views/memberships/_form.html.haml
@@ -9,7 +9,7 @@
 		= f.input :state
 		= f.input :state
 		= f.input :zip
-		= f.input :best_contact
+		= f.input :best_contact, :as => :radio, :collection => ["phone", "email"]
 		= f.input :volunteer_skills
 	= f.buttons
 
