--- a/public/stylesheets/formtastic_changes.css
+++ b/public/stylesheets/formtastic_changes.css
@@ -12,3 +12,6 @@ The following style may be *conditionally* included for improved support on olde
 form.formtastic fieldset ol li fieldset legend { margin-left: -6px;}
 
 --------------------------------------------------------------------------------------------------*/
+
+form.formtastic fieldset.buttons li.commit {padding: 20px 50px 2px 0; overflow: visible; }
+form.formtastic fieldset.inputs li {overflow: visible; }
