--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,4 +6,16 @@
 		= javascript_include_tag :defaults
 		= csrf_meta_tag
 	%body
-		= yield
+		.header
+			%h1 The membership DATABASE!!!!
+		.wrapper
+			%p#notice= notice
+			.nav_sidebar
+				%h3 Navigation Sidebar
+				%ul
+					%li= link_to "Membership Index", memberships_path
+					%li= link_to "Member Index", members_path
+					%li= link_to "Add New Membership", new_membership_path
+					%li= link_to "Help"
+			.content
+				= yield
