--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -1,6 +1,6 @@
 = semantic_form_for @member do |f|
 	- f.inputs do
-		= f.input :membership_id
+		= f.input :membership, :label_method => :home_address
 		= f.input :first_name
 		= f.input :last_name
 		= f.input :phone
