--- a/app/views/memberships/show.html.haml
+++ b/app/views/memberships/show.html.haml
@@ -1,39 +1,58 @@
-%p#notice= notice
 
-%p
-	%b Mailing address:
-	= @membership.mailing_address
-%p
-	%b Home address:
-	= @membership.home_address
-%p
-	%b Phone:
-	= @membership.phone
-%p
-	%b Email:
-	= @membership.email
-%p
-	%b Number:
-	= @membership.number
-%p
-	%b City:
-	= @membership.city
-%p
-	%b State:
-	= @membership.state
-%p
-	%b State:
-	= @membership.state
-%p
-	%b Zip:
-	= @membership.zip
-%p
-	%b Best contact:
-	= @membership.best_contact
-%p
-	%b Volunteer skills:
-	= @membership.volunteer_skills
+%h2 Membership Information
 
-= link_to 'Edit', edit_membership_path(@membership)
+%table.membership_info
+	%tr
+		%th Membership Number
+		%td= @membership.number
+	%tr
+		%th Mailing Address
+		%td= @membership.mailing_address
+	%tr
+		%th Home Address
+		%td	
+			= @membership.home_address
+			%br
+			= "#{@membership.city}, #{@membership.state} #{@membership.zip}"
+	%tr
+		%th Email
+		%td= @membership.email
+	%tr
+		%th Phone
+		%td= @membership.phone
+	%tr
+		%th Best Contact
+		%td= @membership.best_contact
+	%tr
+		%th Volunteer Skills
+		%td= @membership.volunteer_skills
+		
+		
+%br
+
+%h3 Membership Members
+
+- if @membership.members.empty?
+	%p There are currently no members associated with this membership
+- else
+	%table.members
+		%tr
+			%th First Name
+			%th Last Name
+			%th Email
+			%th Phone
+			%th Notes
+
+		- @membership.members.each do |member|
+			%tr.member{:id => member.id}
+				%td= member.first_name
+				%td= member.last_name
+				%td= member.email
+				%td= member.phone
+				%td= member.notes
+			
+%br/
+
+= link_to 'Edit Membership Data', edit_membership_path(@membership)
 \|
 = link_to 'Back', memberships_path
