--- a/app/views/memberships/show.html.haml
+++ b/app/views/memberships/show.html.haml
@@ -53,6 +53,8 @@
 			
 %br/
 
+= link_to "Add Member", new_member_path_for(@membership)
+
 = link_to 'Edit Membership Data', edit_membership_path(@membership)
 \|
 = link_to 'Back', memberships_path
