--- a/app/views/memberships/_form.html.haml
+++ b/app/views/memberships/_form.html.haml
@@ -1,5 +1,5 @@
 = semantic_form_for @membership do |f|
-	- f.inputs do
+	= f.inputs do
 		= f.input :mailing_address
 		= f.input :home_address
 		= f.input :phone
