Got simple_form working on Searcher instances. Styling still looks like shit, but that can be mended

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,11 +18,10 @@
 					%li= link_to "Add New Membership", new_membership_path
 					%li= link_to "Help"
 				#searcher
-					/ = simple_form_for @new_searcher do |form|
-					/ 	= form.inputs do
-					/ 		= form.input :field, :label => "Search by", :as => :select, :collection => Searcher::Fields
-					/ 		= form.input :query, :hint => "Enter your search query here."
-					/ 	= form.buttons
+					= simple_form_for @new_searcher do |form|
+						= form.input :field, :label => "Search by", :as => :select, :collection => Searcher::FIELDS
+						= form.input :query, :hint => "Enter your search query here."
+						= form.submit "Search"
 							
 			.content
 				= yield
