--- a/app/views/memberships/index.html.haml
+++ b/app/views/memberships/index.html.haml
@@ -1,30 +1,9 @@
 %h2 Listing memberships
 
-%table
-	%tr
-		%th Number
-		%th Mailing address
-		%th Home address
-		%th City
-		%th State
-		%th Zip
-		%th Email
-		%th Phone
-		%th
 
-		
-	- @memberships.each do |membership|
-		%tr
-			%td= membership.number
-			%td= membership.mailing_address
-			%td= membership.home_address
-			%td= membership.city
-			%td= membership.state
-			%td= membership.zip
-			%td= membership.email
-			%td= membership.phone
 
-			%td= link_to 'Show', membership
+- @memberships.each do |membership|
+	= render :partial => "membership", :locals => {:membership => membership}
 			
 %br
 
