--- a/app/views/memberships/show.html.haml
+++ b/app/views/memberships/show.html.haml
@@ -54,7 +54,8 @@
 %br/
 
 = link_to "Add Member", new_member_path_for(@membership)
-
+\|
 = link_to 'Edit Membership Data', edit_membership_path(@membership)
 \|
-= link_to 'Back', memberships_path
+= destroy_link "Destroy Membership Record", @membership, :confirm => "Are you sure you want to remove this Membership Record"
+
