--- a/app/views/renewals/index.html.haml
+++ b/app/views/renewals/index.html.haml
@@ -20,7 +20,7 @@
 			%td= renewal.membership_id
 			%td= link_to 'Show', renewal
 			%td= link_to 'Edit', edit_renewal_path(renewal)
-			%td= link_to 'Destroy', renewal, :confirm => 'Are you sure?', :method => :delete
+			%td= destroy_link renewal, :confirm => "Are you sure you want to destroy this renewal record?"
 
 %br
 
