--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -54,20 +54,63 @@ h4 {
 
 table th {
   text-align: left;
-  padding-right: 14px; }
+  padding-right: 10px; }
 table td {
-  padding-right: 14px; }
+  padding-right: 10px; }
+
+.simple_form div.input {
+  margin-bottom: 10px; }
+  .simple_form div.input label {
+    float: left;
+    width: 100px;
+    text-align: right;
+    margin: 2px 10px; }
+  .simple_form div.input select, .simple_form div.input input {
+    clear: left; }
+.simple_form div.boolean, .simple_form .simple_form input[type='submit'] {
+  margin-left: 120px; }
+.simple_form div.boolean label, .simple_form .simple_form label.collection_radio {
+  float: none;
+  margin: 0; }
+.simple_form label.collection_radio {
+  margin-right: 10px;
+  margin-left: 2px; }
+.simple_form .error {
+  clear: left;
+  margin-left: 120px;
+  font-size: 12px;
+  color: #dd0000;
+  display: block; }
+.simple_form .hint {
+  clear: both;
+  margin-left: 120px;
+  font-size: 12px;
+  color: #555555;
+  display: block;
+  font-style: italic; }
 
 .header {
   text-align: center;
   margin: 45px 0 60px; }
 
 .wrapper {
-  width: 1000px; }
-  .wrapper .nav_sidebar {
+  width: 1100px; }
+  .wrapper #nav_sidebar {
     float: left;
-    width: 200px;
-    margin-right: 20px; }
+    width: 192px;
+    margin-right: 45px;
+    background-color: tan;
+    padding-bottom: 30px;
+    padding-left: 8px; }
+    .wrapper #nav_sidebar #searcher .simple_form div.input label {
+      margin-left: 2px;
+      text-align: left; }
+    .wrapper #nav_sidebar #searcher .simple_form div.input select, .wrapper #nav_sidebar #searcher .simple_form div.input input {
+      display: block;
+      clear: both; }
+    .wrapper #nav_sidebar #searcher .simple_form div.input .hint {
+      clear: both;
+      margin-left: 10px; }
   .wrapper .content {
     float: right;
-    width: 780px; }
+    width: 855px; }
