--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -73,7 +73,6 @@ table
 		padding-right: 10px
 
 .simple_form 
-	
 	div.input
 		margin-bottom: 10px
 		label
@@ -104,6 +103,7 @@ table
 		color: #555
 		display: block
 		font-style: italic
+
 
 
 .header
@@ -140,5 +140,8 @@ table
 	.content
 		float: right
 		width: $wrapper_width - $sidebar_width - $sidebar_margin
+		
+		.membership
+			margin: 20px 0 100px 10px
 	
 	
