--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -118,9 +118,10 @@ table
 		float: left
 		width: $sidebar_width - 8px
 		margin-right: $sidebar_margin
-		background-color: tan
+		/*background-color: tan*/
 		padding-bottom: 30px
 		padding-left: 8px
+		padding-top: 70px
 		
 		#searcher
 			.simple_form 
@@ -141,7 +142,14 @@ table
 		float: right
 		width: $wrapper_width - $sidebar_width - $sidebar_margin
 		
+		#membership_form_tabs
+			width: 650px
+		
 		.membership
-			margin: 20px 0 100px 10px
+			margin: 20px 0 50px 0
+			padding: 20px 30px 30px
+			table.membership_info
+				th
+					text-align: right
 	
 	
