--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -99,9 +99,10 @@ table td {
     float: left;
     width: 192px;
     margin-right: 45px;
-    background-color: tan;
+    /*background-color: tan */
     padding-bottom: 30px;
-    padding-left: 8px; }
+    padding-left: 8px;
+    padding-top: 70px; }
     .wrapper #nav_sidebar #searcher .simple_form div.input label {
       margin-left: 2px;
       text-align: left; }
@@ -114,5 +115,10 @@ table td {
   .wrapper .content {
     float: right;
     width: 855px; }
+    .wrapper .content #membership_form_tabs {
+      width: 650px; }
     .wrapper .content .membership {
-      margin: 20px 0 100px 10px; }
+      margin: 20px 0 50px 0;
+      padding: 20px 30px 30px; }
+      .wrapper .content .membership table.membership_info th {
+        text-align: right; }
