Breadcrumbs I'm afraid - haven't been keeping very good track of this and realized that the version I loaded onto the temporary coop laptop (the grey-goose) is outdated, so pushing this to github so I can pull.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
 				#searcher
 					%h4 Search Memberships
 					= simple_form_for @new_searcher do |form|
-						= form.input :field, :label => "Search by", :as => :select, :collection => Searcher::FIELDS
+						= form.input :field, :label => "Search by", :as => :select, :collection => Searcher::FIELDS, :hint => "Don't select 'Complex' unless you REALLY know what you are doing!"
 						= form.input :query, :hint => "Enter your search query here."
 						= form.submit "Search"
 							
