--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -126,6 +126,8 @@ table
 		#searcher
 			.simple_form 
 				div.input
+					input 
+						width: 200px
 					label 
 						margin-left: 2px
 						text-align: left
