--- a/app/views/memberships/_form.html.haml
+++ b/app/views/memberships/_form.html.haml
@@ -14,19 +14,19 @@
 				= f.input :phone
 				= f.input :email
 				= f.input :best_contact, :as => :radio, :collection => ["phone", "email", "either"]
-				= f.input :volunteer_skills
+				= f.input :volunteer_skills, :label => "Volunteer skills / notes"
 				
 		- tabs.create :member_data, "Member Data" do
 			.members
-				- @membership.members.each do |member|
+				- @membership.members.order(:last_name.asc).each do |member|
 					= render :partial => "member_form", :locals => { :membership_form => f, :member => member }
 			= add_member_link("Add Member", f)
 		
 		- tabs.create :renewals, "Renewals" do
-			.renewals
-				- @membership.renewals.each do |renewal|
-					= render :partial => "renewal_form", :locals => {:membership_form => f, :renewal => renewal }
 			= add_renewal_link("Add Renewal", f)
+			.renewals
+				- @membership.renewals.order(:date.desc).each do |renewal|
+					= render :partial => "renewal_form", :locals => {:membership_form => f, :renewal => renewal }		
 			
 	
 	= f.buttons
