--- a/app/views/memberships/show.html.haml
+++ b/app/views/memberships/show.html.haml
@@ -1,4 +1,4 @@
 
 %h2 Membership Information
 
-= render :partial => "membership", :locals => {:membership => @membership}
+= render :partial => "membership_card", :locals => {:membership => @membership}
