--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -1,7 +1,7 @@
 
-$wrapper_width = 1100px
-$sidebar_width = 200px
-$sidebar_margin = 45px
+$wrapper_width: 1100px
+$sidebar_width: 200px
+$sidebar_margin: 45px
 
 
 
@@ -68,9 +68,18 @@ h4
 table
 	th
 		text-align: left
-		padding-right: 10px
+		padding-right: 11px
 	td
-		padding-right: 10px
+		padding-right: 12px
+		padding-bottom: 4px
+		vertical-align: top
+	&.memberships
+		th.address
+			min-width: 130px
+		th.full_record
+			min-width: 70px
+		th.edit
+			min-width: 70px
 
 .simple_form 
 	div.input
@@ -141,8 +150,13 @@ table
 				
 	
 	.content
-		float: right
-		width: $wrapper_width - $sidebar_width - $sidebar_margin
+		#view_toggler
+			//text-align: right
+			margin-bottom: 50px
+		//float: right
+		padding-top: 60px
+		padding-left: $sidebar_width + $sidebar_margin + 40px
+		//width: $wrapper_width - $sidebar_width - $sidebar_margin
 		
 		#membership_form_tabs
 			width: 650px
