--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -55,6 +55,8 @@ h4 {
 table th {
   text-align: left;
   padding-right: 11px; }
+  table th.notes {
+    min-width: 150px; }
 table td {
   padding-right: 12px;
   padding-bottom: 4px;
