--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -69,10 +69,13 @@ table
 	th
 		text-align: left
 		padding-right: 11px
+		&.notes
+			min-width: 150px
 	td
 		padding-right: 12px
 		padding-bottom: 4px
 		vertical-align: top
+		
 	&.memberships
 		th.address
 			min-width: 130px
