--- a/app/views/searchers/show.html.haml
+++ b/app/views/searchers/show.html.haml
@@ -4,6 +4,6 @@
 	There
 	= @memberships.size == 1 ? "is" : "are"
 	= @memberships.size
-	results for your query.
+	match for your query.
 	
 	= render :partial => "memberships/membership_results"
