Have all passing specs passing again and the accordions looking normal

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -170,5 +170,11 @@ table
 			table.membership_info
 				th
 					text-align: right
+					
+					
+form.formtastic.membership
+	div.ui-tabs.ui-widget
+		ul.ui-tabs-nav
+			height: 36px
 	
 	
