--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
 	%head
 		%title Membership database
 		= stylesheet_link_tag :all
-		= javascript_include_tag "jquery.js", "jquery-ui.js", "rails.js", "application.js"
+		= javascript_include_tag :defaults
 		= csrf_meta_tag
 	%body
 		.header
