--- a/app/views/memberships/_form.html.haml
+++ b/app/views/memberships/_form.html.haml
@@ -18,18 +18,15 @@
 				
 		- tabs.create :member_data, "Member Data" do
 			.members
-				- @membership.members.order(:last_name.asc).each do |member|
-					= render :partial => "member_form", :locals => { :membership_form => f, :member => member }
-			= add_member_link("Add Member", f)
+				= f.semantic_fields_for :members do |member_form|
+					= render "member_fields", :f => member_form
+				= link_to_add_fields("Add Member", f, :members)
 		
 		- tabs.create :renewals, "Renewals" do
-			= add_renewal_link("Add Renewal", f)
 			.renewals
-				- @membership.renewals.order(:date.desc).each do |renewal|
-					= render :partial => "renewal_form", :locals => {:membership_form => f, :renewal => renewal }		
-			
+				= f.semantic_fields_for :renewals do |renewal_form|
+					= render "renewal_fields", :f => renewal_form
+				= link_to_add_fields "Add Renewal", f, :renewals
 	
 	= f.buttons
-	
-	
-
+		
