--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -136,3 +136,6 @@ table.memberships th.edit {
       padding: 20px 30px 30px; }
       .wrapper .content .membership table.membership_info th {
         text-align: right; }
+
+form.formtastic.membership div.ui-tabs.ui-widget ul.ui-tabs-nav {
+  height: 36px; }
